--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "ArcoDesign Team",
   "license": "MIT",
   "scripts": {
-    "dev": "vite --config ./config/vite.config.dev.ts",
+    "dev": "vite --host --config  ./config/vite.config.dev.ts",
     "build": "vite build --config ./config/vite.config.prod.ts",
     "buildEslint": "vue-tsc --noEmit && vite build --config ./config/vite.config.prod.ts",
     "report": "cross-env REPORT=true npm run build",
