--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "query-string": "^8.0.3",
     "quill": "^2.0.2",
     "sortablejs": "^1.15.0",
+    "store2": "^2.14.3",
     "vue": "^3.2.40",
     "vue-echarts": "^6.2.3",
     "vue-i18n": "^9.2.2",
